reduced font-weight on header title to make it fit correctly on mobile

--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -19,7 +19,7 @@ $navHeaderFont: 'Passion One', sans-serif;
     .header-text {
         margin: 0;
         font-size: 2.3rem;
-        font-weight: 700;
+        font-weight: 550;
         color: white;
         letter-spacing: 1px;
         font-family: $navHeaderFont;
